# Openbench

./: .dockerignore  .gitignore  BENCHMARK_FIX.md  DEVELOPMENT.md  README.md  TEST_RESULTS.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  quick_benchmark.py  run_benchmark.sh  run_simple_benchmark.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: api_keys.py  auth.py  benchmarks.py  health.py  runs.py
backend/app/core/: auth.py  config.py
backend/app/db/: models.py  session.py
backend/app/runner/: artifacts.py  command_builder.py  executor.py  progress_parser.py  summary_parser.py
backend/app/services/: api_keys.py  auth.py  benchmark_catalog.py  model_discovery.py  run_store.py
data/: openbench.db  openbench.db.corrupted
data/runs/37176f3f-9a19-4461-af1c-d8ee9aca780b/: command.txt  config.json  meta.json
data/runs/44745255-5034-4c5a-b9e8-3543146b11b6/: command.txt  config.json  meta.json  summary.json
data/runs/4c106eec-2b01-4e1f-ba8b-5cd72ae7aba2/: command.txt  config.json  meta.json
data/runs/51befdef-4e7c-49ca-ac77-e77b382e0c69/: command.txt  meta.json
data/runs/5556883b-ae66-441e-aec2-2fe5c85c50b5/: command.txt  config.json  meta.json
data/runs/5869065b-6c08-4e03-a083-2f0b07a5a141/: command.txt  config.json  meta.json
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: client.ts
(+78 files in other folders)
