[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbench-web-backend"
version = "0.1.0"
description = "Backend for OpenBench Web UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

